This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.12.0
  Bugfix: Help window opened from WinMerge was modal (#2590079)
  Bugfix: Crash in editor when undoing (#2590212)
  Translation updates:
  - Croatian (#2596949)
  - Dutch (#2586422, #2590430)
  - German (#2586497)
  - Swedish (#2586274)

WinMerge 2.11.2 - 2009-02-05 (r6428)
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area rect in location pane (#2479804)
  New options page for Shell Integration options (#2433648)
  Remove Frhed hex editor from GUI (context menu) (r6376)
  Register.bat should use Find with full path (#2536582)
  Better Unicode file detection for full contents compare (2477657)
  Bugfix: Could not open project file that contains an ampersand 
    character in folder names (#2372000)
  Bugfix: File compare method "Modified Date and Size" ignored file size
    (#2455595)
  BugFix: Quick compare didn't ignore EOL differences (#2433677)
  Bugfix: Remove EOL characters from command line (#2458728)
  Bugfix: Merging one line diff to empty other side didn't work (#2456399)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Line filter editing didn't update edit box when editing was
   canceled by ESC key (#2493935)
  Bugfix: Wrong number shown for difference when using line filters (#2493980)
  Bugfix: Crashed if compared file disappeared during file compare (#2493945)
  Bugfix: Creating new files caused message about missing files (#2515875)
  Bugfix: Could not hide folders in recursive compare (#2528749)
  Bugfix: Folder Compare:Copy Right/Left don't create folder
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Bugfix: Could not copy files from right to left (#2556904)